# flash-attn3-jax

./: CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: publish.yml
csrc/flash_attn/: check.h  fill_kernel.cu  fill_kernel.h  flash.cpp  flash.h  flash_api.cpp
csrc/flash_attn/src/: block.h  cuda_check.h  epilogue_bwd.hpp  flash_bwd_kernel_sm80.h  flash_bwd_kernel_sm90.h  flash_bwd_launch_template.h  flash_bwd_postprocess_kernel.h  flash_bwd_preprocess_kernel.h  flash_fwd_combine_kernel.h  flash_fwd_combine_launch_template.h  flash_fwd_kernel_sm80.h  flash_fwd_kernel_sm90.h  flash_fwd_launch_template.h  flash_prepare_scheduler.cu  heuristics.h  mainloop_bwd_sm80.hpp  mask.h  pack_gqa.h  paged_kv.h  rotary.h  seqlen.h  softmax.h  static_switch.h  tile_size.h  utils.h
csrc/layer_norm/: ln.h  ln_api.cpp  ln_kernel_traits.h  static_switch.h
csrc/xla/ffi/api/: api.h  c_api.h  ffi.h
src/flash_attn3_jax/: __init__.py  flash.py  flash_hlo.py  flash_sharding.py  kvcache.py  ring_attention.py  varlen.py  varlen_bwd.py  varlen_fwd.py
tests/: benchmark.py  benchmark_fa2.py  conftest.py  ref_mha.py  test_cross.py  test_flash.py  test_kvcache.py  test_ring.py  test_sharding.py  test_varlen.py
